# triangle-intersection

./: CMakeLists.txt  README.md
include/: Answer.h  Parser.h  Segment.h  Task.h  TaskSolver.h  TasksSolver.h  Triangle.h  Vec3.h
src/: Answer.cpp  Parser.cpp  TaskSolver.cpp  Triangle.cpp  main.cpp
test_data/input/: big.txt
test_data/output/: 1.txt  2.txt  3.txt  big.txt
tests/: test.cpp
